--- a/Syllabus/competency.qmd
+++ b/Syllabus/competency.qmd
@@ -12,16 +12,26 @@ keywords: [""]
 
 ### Competency scale {#scale}
 
-You must complete all competency items at the level detailed to achieve the listed grade. You can request half-step adjustments if you fall slightly short on some elements and over on others.  
+You must complete __all__ competency items at the level detailed to achieve the listed grade. You can request __half-step__ adjustments if you fall slightly short on some elements __and__ over on others.  If you are fall short slightly on some elements but dont achive over on others you have not met the requirements for the __half-step__ adjustment.
+
+Example of a half-step adjustment:
+
+ >   Projects 33 points (B+)  
+ >   Project Stretchs 4 (A+)  
+ >   Mid-project checkpoints (online only) 5 (A)  
+ >   Methods & Calculations checkpoints 5 (B)  
+ >   DS Community 5 (A+)  
+ >   Coding challenge 3 (A/B)  
+ >   The over-under of my work is a B+/A-. My extra work on Project Stretches helps ofset me not meeting the A level project points. Also my extra DS Community efforts to ofset my M&C checkpoints. I am requesting a A for the course.
 
 You will need to provide a detailed description in your __**Course Goals Letter**__ of the items you completed to support your grade request. The course goals letter is a reflection on your efforts and the competencies they align with as well as your reflection on achieving your goals for this course.  
 
 #### Example Course Goals Letter (End):  
-Here is my assessment of my efforts and the competencie they aligh with as well as my reflection on achieving my goals for this course:
+Here is my assessment of my efforts and the competency that they align with, as well as my reflection on achieving my goals for this course:
 
  >   Projects 29 points (B-)  
  >   Project Stretchs 1 (C)  
- >   Mid-project checkpoints 4 (B+)  
+ >   Mid-project checkpoints (online only) 4 (B+)  
  >   Methods & Calculations checkpoints 4 (C+)  
  >   DS Community 3 (A)  
  >   Coding challenge 3 (A/B)  
@@ -33,7 +43,7 @@ Here is my assessment of my efforts and the competencie they aligh with as well 
 #### Leader (A)
 | Element                                   | Requirement     | Description               |
 | :----------------------------------       | --------------- | ------------------------- |
-| __Projects__                              | 34 Points       | 5 points per project      |
+| __Projects__                              | 34+ Points      | 5 points per project      |
 | __Project Stretchs__                      | At least 3      | 3 projects all stretches  |
 | __Mid-project checkpoints__               | 5 completed     | Full credit (online only) |
 | __Methods & Calculations checkpoints__    | 6 completed     | All 6 @ 100% Full Points  |
@@ -45,7 +55,7 @@ Here is my assessment of my efforts and the competencie they aligh with as well 
 #### Supporter (B)
 | Element                                   | Requirement     | Description               |
 | :----------------------------------       | --------------- | ------------------------- |
-| __Projects__                              | 29 Points       | 5 points per project      |
+| __Projects__                              | 29-33 Points    | 5 points per project      |
 | __Project Stretchs__                      | At least 2      | 2 projects all stretches  |
 | __Mid-project checkpoints__               | 3 completed     | Full credit (online only) |
 | __Methods & Calculations checkpoints__    | 5 completed     | 5 @ 100% Full Points      |
@@ -57,7 +67,7 @@ Here is my assessment of my efforts and the competencie they aligh with as well 
 #### Listener (C)
 | Element                                   | Requirement     | Description               |
 | :----------------------------------       | --------------- | ------------------------- |
-| __Projects__                              | 24 Points       | 5 points per project      |
+| __Projects__                              | 24-28 Points    | 5 points per project      |
 | __Project Stretchs__                      | At least 1      | 1 projects all stretches  |
 | __Mid-project checkpoints__               | 3 completed     | Full credit (online only) |
 | __Methods & Calculations checkpoints__    | 3 completed     | 3 @ 100% Full Points      |
@@ -69,7 +79,7 @@ Here is my assessment of my efforts and the competencie they aligh with as well 
 #### Asleep (D)
 | Element                                   | Requirement     | Description               |
 | :----------------------------------       | --------------- | ------------------------- |
-| __Projects__                              | 14 Points       | 5 points per project      |
+| __Projects__                              | 14-23 Points    | 5 points per project      |
 | __Project Stretchs__                      | None            | 0 projects all stretches  |
 | __Mid-project checkpoints__               | 1 completed     | Full credit (online only) |
 | __Methods & Calculations checkpoints__    | 2 completed     | 2 @ 100% Full Points      |
@@ -87,16 +97,22 @@ Here is my assessment of my efforts and the competencie they aligh with as well 
 ## Projects
 #### Projects (Questions|Tasks)
 
-_Each of the 7 projects is worth 5 points. There is a draft submission due Wednesday (W) of the 2nd week of the project and the final draft due the following Saturday (S). This gives you 2 attempts to get full points on the project. There are 6 two-week projects (P0-P5) and 1 one-week project (P6). Typically no resubmissions are allowed once the project closes in Canvas. Make the changes and take advantage of the resubmit within this window._
+_Each of the 7 projects is worth 5 points. There is no __late work__ accepted for any project. Any submissions after the due date will receive a zero (0)._
 
-_Projects 1-5 will have stretch questions. You must complete all the core qeustions first before attempting the stretch questions. You must complete all the stretch questions accurately for the project to count toward the competencies. The number in the competencies relating to Project Stretches is the number of projects with all the stretch questions completed._
+_There is a __optional__ early submission up through Friday (F) of the 2nd week of the project. This allows for coaching feedback and gives you that opportunity to fix any errors and resubmit. The resubmission is due by the following Wednesday. __No__ resubmissions are allowed after that date. This structure is designed to give __all__ students 2 attempts to get full project points._  
+
+_All that wait to submit on the due date (Saturday), become ineligible for a rework submission. All submissions after Saturday will receive a zero (0)._
+
+_There are 6 two-week projects (P0-P5) and 1 one-week project (P6)._
+
+_Projects 1-5 will have stretch questions. You must complete all the core questions first before attempting the stretch questions. You must complete all the stretch questions accurately for the project to count as a stretch project for the competency requirements. The number in the competencies relating to Project Stretches is the number of projects with all the stretch questions completed._
 
 ##### Grading Details
 
 * **1 point:**  Submission
-* **3 points:** Submission of a good faith attempt with a statement of work quality.
-* **4 points:** High-quality work that addresses each of the __**Questions and Tasks**__ and a comment in Canvas of your statement of work quality.
-* **5 points:** Addressed issues and completion of resubmission (if needed).
+* **3 points:** Submission of a good faith attempt with a statement of work quality
+* **4 points:** High-quality work that addresses each of the __**Questions and Tasks**__ and a comment in Canvas of your statement of work quality
+* **5 points:** Perfect-quality work or Rework that addressed all issues from the early submission
 
 ## Quiz Checkpoints
 #### Checkpoints (methods and calculations)
@@ -135,7 +151,7 @@ _The mid-project checkpoint has a few questions. It opens the first day of the p
 
 To earn credit for the DS Community element you must __complete tasks from the list below__. At the end of the semester, you will be asked to report on how many tasks you completed and what you learned from them. See the Competency Scale above to determine how many you need to complete based on the grade you want.
 
--  Attend [Data Science Society](https://byuidatascience.github.io/society/) at least once.
+- Attend [Data Science Society](https://byuidatascience.github.io/society/) at least once.
 - Sign up for an email newsletter that will teach you more about data science. [Data Science Weekly](https://www.datascienceweekly.org/) or [Data Elixir](https://dataelixir.com/) are good options.
 - Listen to a podcast episode about data science. [Build a Career in Data Science](https://podcast.bestbook.cool/) has some excellent episodes.
 - Watch a professional presentation on YouTube about data science. Be prepared to share the link and a summary of the video.
