--- a/Syllabus/syllabus.qmd
+++ b/Syllabus/syllabus.qmd
@@ -62,9 +62,9 @@ This course focuses on building core data science skills. You will learn to prog
  
 ### Online reading materials
 
-* [Python for Data Science](https://byuidatascience.github.io/python4ds/): A port of [R for Data Science](https://r4ds.had.co.nz/index.html) using the Python packages pandas and Altair.
-* [pandas User Guide](https://pandas.pydata.org/pandas-docs/stable/user_guide/index.html)
-* [Altair User Guide](https://altair-viz.github.io/)
+* Python for Data Science [python4DS](https://aeturrell.github.io/python4DS/welcome.html) is a port of [R for Data Science (2e)](https://r4ds.hadley.nz/) into Python.
+* [Pandas User Guide](https://pandas.pydata.org/pandas-docs/stable/user_guide/index.html)
+* [Lets-Plot User Guide](https://lets-plot.org/python/pages/charts.html)
 * [Python Data Science Handbook](https://jakevdp.github.io/PythonDataScienceHandbook/)
 * [SQL](https://docs.data.world/documentation/sql/concepts/basic/intro.html)
 
