--- a/Projects/project_3.qmd
+++ b/Projects/project_3.qmd
@@ -1,8 +1,8 @@
 ---
-title: "Project 3: Finding Relationships in Baseball"
+title: "Project 3: Late Flights & Missing Data (JSON)"
 date: 2020-05-01T11:02:05+06:00
 lastmod: 2020-09-15T10:42:26+06:00
-weight: 4
+weight: 3
 draft: false
 # search related keywords
 keywords: [""]
@@ -11,96 +11,78 @@ keywords: [""]
 
 ### Walkthrough
 ```{=html}
-<iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/1157612/sp/115761200/embedIframeJs/uiconf_id/41338032/partner_id/1157612?iframeembed=true&playerId=kaltura_player&entry_id=1_vorsrvf5&flashvars[localizationCode]=en&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;flashvars[Kaltura.addCrossoriginToIframe]=true&amp;&wid=1_yk1gpo38" width="608" height="402" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="W06 - Project 3 Walkthrough"></iframe>
-```
-
-
-### SQL Refresher
-```{=html}
-<iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/1157612/sp/115761200/embedIframeJs/uiconf_id/41338032/partner_id/1157612?iframeembed=true&playerId=kaltura_player&entry_id=1_9t2izp1p&flashvars[localizationCode]=en&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;flashvars[Kaltura.addCrossoriginToIframe]=true&amp;&wid=1_bf7e4rqh" width="608" height="402" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="W07 - SQL Intro"></iframe>
+<iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/1157612/sp/115761200/embedIframeJs/uiconf_id/41338032/partner_id/1157612?iframeembed=true&playerId=kaltura_player&entry_id=1_23faja3r&flashvars[localizationCode]=en&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;flashvars[Kaltura.addCrossoriginToIframe]=true&amp;&wid=1_pa4fc35g" width="608" height="402" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="W04 - Project 2 Walkthrough"></iframe>
 ```
 
 
 ### Background
 
-When you hear the word “relationship” what is the first thing that comes to mind? Probably not baseball. But a relationship is simply a way to describe how two or more objects are connected. There are many relationships in baseball such as those between teams and managers, players and salaries, even stadiums and concession prices. 
+Delayed flights are not something most people look forward to. In the best case scenario you may only wait a few extra minutes for the plane to be cleaned. However, those few minutes can stretch into hours if a mechanical issue is discovered or a storm develops. Arriving hours late may result in you missing a connecting flight, job interview, or your best friend’s wedding.
 
-The graphs on [Data Visualizations from Best Tickets](https://web.archive.org/web/20200804101201/http://www.besttickets.com/blog/mlb-players-census/) show many other relationships that exist in baseball.
+In 2003 the Bureau of Transportation Statistics (BTS) began collecting data on the causes of delayed flights. The categories they use are Air Carrier, National Aviation System, Weather, Late-Arriving Aircraft, and Security. You can visit the [BTS website](https://www.bts.gov/topics/airlines-and-airports/understanding-reporting-causes-flight-delays-and-cancellations) to read definitions of these categories.
 
 
 ### Client Request
 
-For this project, the Client wants SQL queries that they can use to retrieve data for use on their website without needing Python. They would also like to see the results in Lets-Plot charts.
+The JSON file for this project contains information on delays at 7 airports over 10 years. Your task is to clean the data, search for insights about flight delays, and communicate your results to the Client. The Client is a CEO of a flight booking app who is interested in the causes of flight delays and wants to know which airports have the worst delays. They also want to know the best month to fly if you want to avoid delays of any length.
 
 
 ### Data
-
-::: {.callout-note collapse="false"}
-Every data science project should start with data, and our class projects are no different. Each project will have __'URL'__ and __'Information'__ links like the ones below. Project 3 will use the Lahman Baseball Database. You will need to download the database and set it up on your computer to complete the project. Place it inside the DS250 Projects folder within your repository next to the project_3.qmd file. Note: Right click the __'Download'__ link and select "Save Link As" to download the data to your computer.
+::: {.callout-note collapse="true"}
+Every data science project should start with data, and our class projects are no different. Each project will have __'URL'__ and __'Information'__ links like the ones below. Right click the __'URL'__ link and select "Copy Link" to use it to import the data into your project. This is the preferred method to get data into your report as you will be publishing your report to GitHub. If you choose to download the data file to your computer you will need to save it in the same folder as your `project#.qmd` file for it to work correclty in GitHub. 
 :::
 
-__Download:__ [lahmansbaseballdb](/Data/lahmansbaseballdb.sqlite)  
-__Information:__ [Lahman Data Dictionary](/Data/readme2014.txt)  
-__Setup Instructions:__ [See SQL Setup](/Setup/sql_setup.qmd)
+__URL:__ [JSON File](https://github.com/byuidatascience/data4missing/raw/master/data-raw/flights_missing/flights_missing.json)   
+__Information:__ [Data Description](https://github.com/byuidatascience/data4missing/blob/master/data.md)  
+__Subject Matter:__ [Types of Delay](https://aspm.faa.gov/aspmhelp/index/Types_of_Delay.html)  
 
 
 ### Readings
-- [SQL Setup and References](../Course%20Materials/sql.qmd) (Read)
-- [SQL for Data Science](../Course%20Materials/sql_page.qmd) (Read)
+- [P4DS: CH4 Data Transformation](https://byuidatascience.github.io/python4ds/transform.html) (Read)
+- [P4DS: CH6 Tidy Data](https://byuidatascience.github.io/python4ds/tidy-data.html) (Read)
+- [P4DS: CH11 Visualization](https://aeturrell.github.io/python4DS/visualise.html) (Read)
+- [P4DS: CH12 Layers](https://aeturrell.github.io/python4DS/vis-layers.html) (Skim)
+- [P4DS: CH13 Exploratory Data Analysis](https://byuidatascience.github.io/python4ds/exploratory-data-analysis.html) (Skim)
+- [P4DS: CH21 Missing Values](https://aeturrell.github.io/python4DS/missing-values.html) (Read)
+- [P4DS: Ch25.3 JSON](https://aeturrell.github.io/python4DS/rectangling.html#json-java-script-object-notation) (Read)
 
 
 #### Optional References
-
-- [Why SQL is beating NoSQL, and what this means for the future of data](https://blog.timescale.com/blog/why-sql-beating-nosql-what-this-means-for-future-of-data-time-series-database-348b777b847a/)  
+- [Python Data Science Handbook: Missing Data](https://jakevdp.github.io/PythonDataScienceHandbook/03.04-missing-values.html)
+- [Handling Missing Data](https://towardsdatascience.com/machine-learning-handling-missing-data-27b09ab146ba)
+- [Wikipedia Missing Data](https://en.wikipedia.org/wiki/Missing_data)
+- [isin method](https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#indexing-with-isin)
+- [where method](https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#the-where-method-and-masking)
+- [np.where method](https://numpy.org/doc/stable/reference/generated/numpy.where.html)
+- [replace method](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.replace.html)
+- [An introduction to JSON](https://towardsdatascience.com/an-introduction-to-json-c9acb464f43e) _(May need to open in ingognito to read.)_
+- [The key word in 'Data Science' is not Data...](https://simplystatistics.org/posts/2013-12-12-the-key-word-in-data-science-is-not-data-it-is-science/)
+- [How to Handle Missing Data](https://towardsdatascience.com/how-to-handle-missing-data-8646b18db0d4) _(May need to open in ingognito to read.)_
+- [Lambda Function](https://realpython.com/python-lambda/)
 
 
 ### Questions and Tasks (Core)
 
-1. __Write an SQL query to create a new dataframe about baseball players who attended BYU-Idaho. The new table should contain five columns: playerID, schoolID, salary, and the yearID/teamID associated with each salary. Order the table by salary (highest to lowest) and print out the table in your report.__  
+1. __Fix all of the varied missing data types in the data to be consistent (all missing values should be displayed as “NaN”).__ In your report include one record example (one row) from your new data, in the raw JSON format. Your example should display the "NaN" for at least one missing value.__  
 
-1. __This three-part question requires you to calculate batting average (number of hits divided by the number of at-bats)__  
+1. __Which airport has the worst delays?__ Describe the metric you chose, and why you chose it to determine the “worst” airport. Your answer should include a summary table that lists (for each airport) the total number of flights, total number of delayed flights, proportion of delayed flights, and average delay time in hours.  
 
-    a. Write an SQL query that provides playerID, yearID, and batting average for players with at least 1 at bat that year. Sort the table from highest batting average to lowest, and then by playerid alphabetically. Show the top 5 results in your report.  
-    a. Use the same query as above, but only include players with at least 10 at bats that year. Print the top 5 results.  
-    a. Now calculate the batting average for players over their entire careers (all years combined). Only include players with at least 100 at bats, and print the top 5 results.  
+1. __What is the best month to fly if you want to avoid delays of any length?__ Describe the metric you chose and why you chose it to calculate your answer. Include one chart to help support your answer, with the x-axis ordered by month. (To answer this question, you will need to remove any rows that are missing the `Month` variable.)  
 
-1. __Pick any two baseball teams and compare them using a metric of your choice (average salary, home runs, number of wins, etc). Write an SQL query to get the data you need, then make a graph using Lets-Plot to visualize the comparison. What do you learn?__  
+1. According to the BTS website, the “Weather” category only accounts for severe weather delays. Mild weather delays are not counted in the “Weather” category, but are actually included in both the “NAS” and “Late-Arriving Aircraft” categories. __Your job is to create a new column that calculates the total number of flights delayed by weather (both severe and mild).__ You will need to replace all the missing values in the Late Aircraft variable with the mean. Show your work by printing the first 5 rows of data in a table. Use these three rules for your calculations:  
+
+    a. 100% of delayed flights in the Weather category are due to weather  
+    a. 30% of all delayed flights in the Late-Arriving category are due to weather  
+    a. From April to August, 40% of delayed flights in the NAS category are due to weather. The rest of the months, the proportion rises to 65%  
+
+1. __Using the new weather variable calculated above, create a barplot showing the proportion of all flights that are delayed by weather at each airport. Describe what you learn from this graph.__  
 
 
 ### Questions and Tasks (Stretch)
 
 Here is an example Stretch question(s) for this project. Your instructor may assign different Stretch question(s). You must comment in Canvas when submitting your project if you completed any of the Stretch questions.  
 
-1. __Advanced Salary Distribution by Position (with Case Statement):__  
-
-    * Write an SQL query that provides a summary table showing the average salary for players in each position (e.g., pitcher, catcher, outfielder) across all years. Include the following columns:
-
-        * position
-        * average_salary
-        * total_players
-        * highest_salary  
-
-    * The highest_salary column should display the highest salary ever earned by a player in that position. If no player in that position has a recorded salary, display “N/A” for the highest salary.  
-
-    * Additionally, create a new column called salary_category using a case statement:  
-
-        * If the average salary is above $1 million, categorize it as “High Salary.”  
-        * If the average salary is between $500,000 and $1 million, categorize it as “Medium Salary.”  
-        * Otherwise, categorize it as “Low Salary.”  
-
-    * Order the table by average salary in descending order.
-    * Print the top 10 rows of this summary table.  
-
-1. __Advanced Career Longevity and Performance (with Subqueries):__
-
-    * Calculate the average career length (in years) for players who have played at least one game. Then, identify the top 10 players with the longest careers (based on the number of years they played). Include their:  
-
-        * playerID
-        * first_name
-        * last_name
-        * career_length
-
-    * The career_length should be calculated as the difference between the maximum and minimum yearID for each player.  
+1. __Which delay is the worst delay?__ Create a similar analysis as above for Weahter Delay with: Carrier Delay and Security Delay. Compare the proportion of delay for each of the three categories in a Chart and a Table. Describe your results.
 
 
 ### Submission:
@@ -133,8 +115,24 @@ When you have completed the report, you will need to follow this process to subm
 
 ### Deliverables:
 
-_Use this [template](../Templates/ds250_project_template.qmd) to submit your Client Report. The template has two sections:_
+::: {.callout-note collapse="true"}
+Deliverables are “the quantifiable goods or services that must be provided upon the completion of a project”. In this class the deliverable for each project is a GitHub published report created using Quarto files. This final section will be the same for each project. 
+:::
+
+_Use this [P3_template](../Templates/P3_template.qmd) to submit your Client Report. The template has two sections:_
 
 1. _A short elevator pitch that highlights key values or metrics from the results. Describing these key insights to interest or hook the reader to want to read more about your work. The writing style should be more technical with some creative elements. Do not summarize what you did._  
 1. _Answers to the questions | tasks. Each should include a written description of your results, code cells with comments, charts and/or tables._  
-1. _A short __summary of work must__ be submitted in the comments in Canvas wwhen you submit the URL. Rate your own work on a scale of 1-5. 1 being poor and 5 being excellent. Include a short description of why you rated your work the way you did._
+1. _In Canvas write short __summary of work must__ be submitted in the comments when you submit the URL. Rate your own work on a scale of 1-5. 1 being poor and 5 being excellent. Include a short description of why you rated your work the way you did._
+
+::: {.callout-note collapse="true"}
+_Your report should be written in quarto markdown files and pushed to GitHub. Submit a URL of the rendered project in Canvas. (Do not submit the URL to the GitHub `.qmd` file)_  
+:::
+
+
+### Feedback:
+::: {.callout-note collapse="true"}
+You will recieve feedback and/or coaching notes in the form of a GitHub issue. You will need to address the feedback, re-render and resubmit the project, and mark the GitHub issue as closed.
+:::
+
+
