--- a/Setup/python_setup.qmd
+++ b/Setup/python_setup.qmd
@@ -15,16 +15,32 @@ keywords: [""]
 <iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/1157612/sp/115761200/embedIframeJs/uiconf_id/41338032/partner_id/1157612?iframeembed=true&playerId=kaltura_player&entry_id=1_8ncm34c3&flashvars[localizationCode]=en&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;flashvars[Kaltura.addCrossoriginToIframe]=true&amp;&wid=1_5ngi2evj" width="608" height="402" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="W01 - Install Python"></iframe>
 ```
 
-We need to download and install the latest version of python approved by your professor. (Python 3.11.7)
+First we need to confirm you dont already have python installed. Open a command prompt (win) or terminal (mac) and type `python --version` or `python3 --version`. If you see a version number, you already have python installed. If you see an error message, you need to install python. If the version you have is not the same as the one listed below you will still want to uninstall and install the correct version.
 
-Note: [***do not***] install python from `VS Code` or the `Microsoft Store` or `Anaconda`
-Python.org is the only place you should install VS Code from (link below)
+How to uninstall python on windows:
+- Open the `Control Panel`
+- Click on `Programs`
+- Click on `Programs and Features`
+- Find `Python` in the list of programs
+- Right click on `Python` or click on the ... and select `Uninstall`
+
+How to uninstall python on mac:
+- If it is python 3.10 or higher you should be fine to uninstall it. 
+- Make sure it has a folder in your applications folder before uninstalling. 
+- To uninstall simply drag the python folder to the trash.
+- If it does not have a folder in the applciations folder it will be much more difficult to uninstall. 
+- Do not uninstall python 2.7 if you have it. We will not be using it but it is required for some system functions.
+
+We need to download and install the latest version of python approved for this course. (__Python 3.12__)
+
+__Note:__ [***do not***] install python from `VS Code` or the `Microsoft Store` or `Anaconda`
+Python.org is the _only_ place you should install VS Code from (link below)
 
 - [Python](https://python.org/downloads)
 
 
 #### Install Python on Windows
-Make sure to check the box that says `Add Python to PATH` before clicking `Install Now`. Sometimes it is phrased as `Add Python to environment variables`.  
+Make sure to check the box that says `Add Python to PATH` before clicking `Install Now`. Sometimes it is phrased as `Add Python to environment variables`. Failture to do so will cause issues with the `quarto` install process.
 ![](/images/python_env_var.png){width=400}
 
 
