--- a/Setup/quarto_setup.qmd
+++ b/Setup/quarto_setup.qmd
@@ -33,7 +33,8 @@ You will need to install the Quarto CLI and then go through the VS Code directio
 <!-- 1. Install [QUARTO VS Code Extension](https://marketplace.visualstudio.com/items?itemName=quarto.quarto)
 3. [Setup your VS Code](https://quarto.org/docs/get-started/hello/vscode.html)
 4. [Really read the VS Code setup entirely](https://quarto.org/docs/get-started/hello/vscode.html) -->
-1. Download the class [instructional template](/Templates/ds250_project_template.qmd). Open it in VS Code and press the `Preview` button. It should produce a HTML file with a `Plotly Express Chart` and a `data table`. (If it errors, it may be missing some libraries. Here is the code to install them.)
+1. Download the class [instructional template](/Templates/ds250_project_template.qmd). Open it in VS Code and press the `Preview` button. It should produce a HTML file with a `Lets-Plot Chart` and a `data table`. (If it errors, it may be missing some libraries. Go back to the python library setup.)
+
 ```{=html}
 <iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/1157612/sp/115761200/embedIframeJs/uiconf_id/41338032/partner_id/1157612?iframeembed=true&playerId=kaltura_player&entry_id=1_g27qjdxx&flashvars[localizationCode]=en&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;flashvars[Kaltura.addCrossoriginToIframe]=true&amp;&wid=1_hxreaxti" width="608" height="402" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="W01 - Quarto Template Intro"></iframe>
 ```
@@ -47,8 +48,8 @@ You will need to install the Quarto CLI and then go through the VS Code directio
 When clicking on the Preview Icon ![](/images/quarto_preview_icon.png){width=50} in the top right of your `.qmd` file, some students experience the `preview` rendering their entire course website. If this is the case, you can fix it by only opening the `project.qmd` file you are working on in VS-Code instead of opening the entire course folder.
 
 
-#### Continue to Git and GitHub
-[Install Git and GitHub](/Setup/git_github_setup.qmd)
+<!-- #### Continue to Git and GitHub
+[Install Git and GitHub](/Setup/git_github_setup.qmd) -->
 
 <!-- ```Python
 #%%
