--- a/Skill Builders/introduction.qmd
+++ b/Skill Builders/introduction.qmd
@@ -130,6 +130,6 @@ mpg = pd.read_csv(url)
 ::: {.callout-note collapse="true"} 
 #### After you have completed this skill builder with your team (or on your own) then compare your work to our script
 
-**See the [script](/Skill Builders/introduction.py).**
+**See the [script](/Skill%20Builders/introduction.py).**
 
 :::
