--- a/Projects/project_0_dp.qmd
+++ b/Projects/project_0_dp.qmd
@@ -22,10 +22,9 @@ This project will use the Palmer Penguins data set. This dataset is embedded in 
 __URL:__ [penguins data](https://aeturrell.github.io/python4DS/data-visualise.html#the-penguins-data-frame)   
 
 
-
 ### Readings
 
-Please do the assigned **before coming to class**.
+Please do the assigned **before coming to class**!
 
 Many people different levels of experience with Python, VS Code, and programming in general. That is why there are so many and why skimming may be a good strategy for some students, but not for others. 
 
